# umfile_utils

./: .coverage  .coveragerc  .gitignore  README.md  environment-dev.yml  pyproject.toml  setup.py  validate_esm15_override.py
.conda/: env_build.yml  env_dev.yml  meta.yaml
.github/workflows/:  unit_testing_umfile_utils.yml  CD.yml  CI.yml  github-actions-demo.yml
ci/: environment-3.10.yml  environment-3.11.yml
src/: add_fields_to_dump.py  ancil2netcdf.py  change_calendar.py  change_calendar365.py  change_calendar_header.py  change_dump_date.py  change_dump_date2.py  change_stashcode.py  check_land_overlap_idx.py  count_land.py  fix_polar_anom.py  get_calendar.py  levelheights.py  mask_edit.py  mergefiles.py  mule_fields_subset.py  perturbIC.py  remove_timeseries_demo.py  sortum.py  stashvar.py  stashvar_cmip6.py  stashvar_validate_stdnames.py  subset_ancillary.py  um2netcdf.py  um2netcdf4.py  um2netcdf4_cmip6.py  um2netcdf_iris.py  um2netcdf_iris_mon.py  um_fields_subset.py  um_fieldsfile_dump.py  um_modify_field.py  um_replace_field.py  um_timeseries.py  umfile.py  valid_times.py
src/umfile_utils/: GLOBE30_patch_aus.py  __init__.py  access_landmask.py  add_fields_to_dump.py  change_calendar.py  change_calendar365.py  change_calendar_header.py  change_dump_date.py  change_endianness.py  check_land_overlap.py  count_tiles.py  imit_soilmoisture.py  interpolate_ancillary.py  iris_stashname.py  lbcdump.py  levelheights.py  mask_edit.py  nccmp_um2netcdf.py  perturbIC.py  polar_anom.py  prog_fields_mismatch.py  reset_neg_snow.py  sortum.py  sstice_ancil.py  stashvar.py  stashvar_cmip6.py  stashvar_validate_stdnames.py  um2netcdf.py  um2netcdf4.py  um2netcdf4_cmip6.py  um2netcdf4_dev.py  um2netcdf_iris.py  um2netcdf_iris_mon.py  um_complexity.py  um_fields_subset.py  um_fieldsfile_dump.py  um_grid_flip.py  um_modify_field.py  um_timeseries.py  um_zero_field.py
tests/: change_dump_date_test.py  perturbIC_test.py  um_fields_subset_test.py
