[project]
name = "umfile_test"
authors = [
    { name = "ACCESS-NRI" },
]
description = "Intake catalog managed by ACCESS-NRI and associated tools"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cftime",
    "ecgtools>=2023.7.13",
    "intake==0.7.0",
    "intake-dataframe-catalog>=0.2.4",
    "intake-esm>=2023.11.10",
    "jsonschema",
    "pooch",
    "xarray",
]
