[project]
name = "umfile-utils"
version = "0.1.0"
authors = [
  {name = "Martin Dix", email="martin.dix@anu.edu.au"},
  {name = "Lindsey Oberhelman", email="lindsey.oberhelman@anu.edu.au"},
  {name = "Davide Marchegiani", email="davide.marchegiani@anu.edu.au"},
]
description = "Collection of tools for UM fieldsfiles."
license = { file = "LICENSE" }
    keywords = ["UM", "UM utilities", "UM fields files", "umfile_utils"]
    dynamic = ["version"]
dependencies = [
    "cftime",
    "ecgtools>=2023.7.13",
    "intake==0.7.0",
    "intake-dataframe-catalog>=0.2.4",
    "intake-esm>=2023.11.10",
    "jsonschema",
    "pooch",
    "xarray",
]
